--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "arraybuffer-to-string": "^1.0.2",
+    "file-chunk-reader": "^2.0.0",
     "string-to-arraybuffer": "^1.0.2"
   }
 }
