--- a/tools/netstreams_benchmark/package.json
+++ b/tools/netstreams_benchmark/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {
+    "ws": "^6.1.2"
   }
 }
