--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "omnistreams-concurrent",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "mocha"
   },
