--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "omnistreams-core",
   "version": "0.3.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/bundle.cjs.js",
+  "module": "./src/index.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup ./src/index.mjs --format cjs --file ./dist/bundle.cjs.js"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "rollup": "^1.10.0"
+  }
 }
