--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "omnistreams-concurrent",
   "version": "0.3.0",
   "description": "",
-  "main": "./src/index.js",
+  "main": "./dist/bundle.cjs.js",
+  "module": "./src/index.mjs",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha -r esm",
+    "build": "rollup ./src/index.mjs --format cjs --file ./dist/bundle.cjs.js"
   },
   "author": "",
   "license": "MIT",
@@ -13,6 +15,8 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^5.2.0"
+    "esm": "^3.2.22",
+    "mocha": "^5.2.0",
+    "rollup": "^1.10.0"
   }
 }
