Switch back to bundling

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "omnistreams",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "description": "",
-  "main": "./dist/bundle.cjs.js",
+  "main": "./index.mjs",
   "module": "./index.mjs",
   "scripts": {
     "test": "mocha -r esm",
